# dihash

./: LICENSE  README.md  benchmark.py  dihash.py  pyproject.toml  setup.py  test.py
benchmark_results/: graph_hash_1-1000_nodes.csv  graph_hash_all_nodes_1-1000_nodes.csv  graph_hash_quotient_1-1000_nodes.csv  graph_hash_time_distribution-500_nodes.csv  merkle_graph_hash_1-1000_nodes.csv
dihash/: __init__.py  benchmark.py
tests/: gen_graphs.py  hash_impl_test.py
