[project]
name = "dihash"
version = "2.1"
authors = [
  { name="Caleb Helbling", email="caleb.helbling@yahoo.com" },
]
description = "Python implementation of various directed graph hashing functions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[project.urls]
"Homepage" = "https://github.com/calebh/dihash"
"Bug Tracker" = "https://github.com/calebh/dihash/issues"